--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Food Gallary</title>
 </head>
 <body>
-    
+    <section class="header-section">
+        <div class="first-half">
+            <h1><span class="bg-color">Skip</span> The Diet</h1>
+            <h1>Just Eat Healthy With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a class="anchor-button" target="_blank" href="index.html">Order Food</a>
+        </div>
+        <div class="first-half">
+            <img src="images/removebg.png" alt="">
+        </div>
+    </section>
+    <section class="section-two">
+        <div class="first-half">
+            <img src="images/guy-eats-hot-dog.png" alt="">
+        </div>
+        <div class="first-half">
+            <h2>About me</h2>   
+            <p>Cooking is something thats makes me happy and i loved cooking for others.I always wanted to be a chef and i really worked hard.It is a very nice profession where you can learn new things daily.When I serve a bowl of a recipe,it contains my love,hard work,and passion for my profession.</p>
+            <a href="index.html" class="anchor-button" target="_blank">Contact me</a>
+        </div>
+    </section>
+    <section>
+        <div class="second-half">
+            <h3>My Recipies</h3>
+            <p>My food are very delicious and nutritious.I offers you a huge variety of recipes for every occasion.Find a selection of tried-and-true recipe favorites or get inspiration for your new go-tos.</p>
+        </div> 
+        <div class="food-recipe">
+            <div class="third-half">
+                <img src="images/Project Cover5.png" alt="">
+                <h3>Recipe Title</h3>
+                <p>Bring 2 to 3 inches of water mixed with 1 tsp.vinegar to boil in large skillet.Even kids will love this quick and easy fried rice, perfect for a weeknight meal.See notes section for Low FODMAP diet tip.</p>
+            </div>
+            <div class="third-half">
+                <img src="images/Project Cover7.png" alt="">
+                <h3>Recipe Title</h3>
+                <p>* Nutrition information is estimated based on the ingredients and cooking instructions as described.Even kids will love this quick and easy fried rice, perfect for a weeknight meal. See notes section for Low FODMAP diet
+                tip.</p>
+            </div>
+            <div class="third-half">
+                <img src="images/Project Cover8.png" alt="">
+                <h3>Recipe Title</h3>
+                <p>Grill additional chicken and vegetables to use later, sliced, in salads or wrap sandwiches.Even kids will love this quick and easy fried rice, perfect for a weeknight meal. See notes section for Low FODMAP diet
+                tip.</p>
+            </div>
+        </div>  
+    </section>
 </body>
 </html>
