--- a/index.html
+++ b/index.html
@@ -32,25 +32,23 @@
     <section>
         <div class="second-half">
             <h3>My Recipies</h3>
-            <p>My food are very delicious and nutritious.I offers you a huge variety of recipes for every occasion.Find a selection of tried-and-true recipe favorites or get inspiration for your new go-tos.</p>
+            <p>My food are very delicious and nutritious.I offers you a huge variety of recipes for every occasion.Find a selection of tried.</p>
         </div> 
         <div class="food-recipe">
             <div class="third-half">
                 <img src="images/Project Cover5.png" alt="">
                 <h3>Recipe Title</h3>
-                <p>Bring 2 to 3 inches of water mixed with 1 tsp.vinegar to boil in large skillet.Even kids will love this quick and easy fried rice, perfect for a weeknight meal.See notes section for Low FODMAP diet tip.</p>
+                <p>Bring 2 to 3 inches of water mixed with 1 tsp.vinegar to boil in large skillet.Even kids will love this quick and easy fried rice.</p>
             </div>
             <div class="third-half">
                 <img src="images/Project Cover7.png" alt="">
                 <h3>Recipe Title</h3>
-                <p>* Nutrition information is estimated based on the ingredients and cooking instructions as described.Even kids will love this quick and easy fried rice, perfect for a weeknight meal. See notes section for Low FODMAP diet
-                tip.</p>
+                <p>* Nutrition information is estimated based on the ingredients and cooking instructions as described.Even kids will love.</p>
             </div>
             <div class="third-half">
                 <img src="images/Project Cover8.png" alt="">
                 <h3>Recipe Title</h3>
-                <p>Grill additional chicken and vegetables to use later, sliced, in salads or wrap sandwiches.Even kids will love this quick and easy fried rice, perfect for a weeknight meal. See notes section for Low FODMAP diet
-                tip.</p>
+                <p>Grill additional chicken and vegetables to use later, sliced, in salads or wrap sandwiches.Even kids will love this quick.</p>
             </div>
         </div>  
     </section>
