--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <section class="header-section">
         <div class="first-half">
-            <h1><span class="bg-color">Skip</span> The Diet</h1>
-            <h1>Just Eat Healthy With Food Network</h1>
+            <h1><span class="bg-color">Skip</span> The Diet </h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
             <a class="anchor-button" target="_blank" href="index.html">Order Food</a>
         </div>
@@ -52,5 +53,28 @@
             </div>
         </div>  
     </section>
+    <section>
+      <div class="follower-option">
+            <div>
+                <h1>700K</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div>
+                <h1>2.4m</h1>
+                <p>Instagram Followers</p>
+            </div>
+            <div>
+                <h1>100K</h1>
+                <p>Dribbble Shot Likes</p>
+            </div>
+      </div>
+    </section>
+    <footer class="footer-area">
+      <div class="footer-div">
+        <h3><span class="bg-color">FOOD</span> NETWORK</h3>
+           <p>
+            Eat healthy to live healthy. Live healthy to live happy.</p>
+      </div>
+    </footer>
 </body>
 </html>
