footer and style added

--- a/index.html
+++ b/index.html
@@ -69,6 +69,30 @@
             </div>
       </div>
     </section>
+    <section>
+        <div class="food-images">
+            <h3>Choose a healthy and delicious food for you</h3>
+            <div class="food-picture">
+                <img src="images/Project Cover.jpg" alt="">
+            </div>
+            <div class="food-picture">
+                <img src="images/Project Cover.png" alt="">
+            </div>
+            <div class="food-picture">
+                <img src="images/Project Cover1.jpg" alt="">
+            </div>
+            <div class="food-picture">
+                <img src="images/Project Cover5.png" alt="">
+            </div>
+            <div class="food-picture">
+                <img src="images/Project Cover7.png" alt="">
+            </div>
+            <div class="food-picture">
+                <img src="images/Project Cover8.png
+                " alt="">
+            </div>
+        </div>
+    </section>
     <footer class="footer-area">
       <div class="footer-div">
         <h3><span class="bg-color">FOOD</span> NETWORK</h3>
