style and picture added

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <a class="anchor-button" target="_blank" href="index.html">Order Food</a>
         </div>
         <div class="first-half">
-            <img src="images/removebg.png" alt="">
+            <img src="images/removebg.png" alt="lady eating salads">
         </div>
     </section>
     <section class="section-two">
         <div class="first-half">
-            <img src="images/guy-eats-hot-dog.png" alt="">
+            <img src="images/guy-eats-hot-dog.png" alt="man eating burger">
         </div>
         <div class="first-half">
             <h2>About me</h2>   
@@ -37,17 +37,17 @@
         </div> 
         <div class="food-recipe">
             <div class="third-half">
-                <img src="images/Project Cover5.png" alt="">
+                <img src="images/Project Cover5.png" alt="Food">
                 <h3>Recipe Title</h3>
                 <p>Bring 2 to 3 inches of water mixed with 1 tsp.vinegar to boil in large skillet.Even kids will love this quick and easy fried rice.</p>
             </div>
             <div class="third-half">
-                <img src="images/Project Cover7.png" alt="">
+                <img src="images/Project Cover7.png" alt="Food">
                 <h3>Recipe Title</h3>
                 <p>* Nutrition information is estimated based on the ingredients and cooking instructions as described.Even kids will love.</p>
             </div>
             <div class="third-half">
-                <img src="images/Project Cover8.png" alt="">
+                <img src="images/Project Cover8.png" alt="Food">
                 <h3>Recipe Title</h3>
                 <p>Grill additional chicken and vegetables to use later, sliced, in salads or wrap sandwiches.Even kids will love this quick.</p>
             </div>
@@ -73,23 +73,22 @@
         <div class="food-images">
             <h3>Choose a healthy and delicious food for you</h3>
             <div class="food-picture">
-                <img src="images/Project Cover.jpg" alt="">
+                <img src="images/Project Cover.jpg" alt="Food">
             </div>
             <div class="food-picture">
-                <img src="images/Project Cover.png" alt="">
+                <img src="images/Project Cover.png" alt="Food">
             </div>
             <div class="food-picture">
-                <img src="images/Project Cover1.jpg" alt="">
+                <img src="images/Project Cover1.jpg" alt="Food">
             </div>
             <div class="food-picture">
-                <img src="images/Project Cover5.png" alt="">
+                <img src="images/Project Cover5.png" alt="Food">
             </div>
             <div class="food-picture">
-                <img src="images/Project Cover7.png" alt="">
+                <img src="images/Project Cover7.png" alt="Food">
             </div>
             <div class="food-picture">
-                <img src="images/Project Cover8.png
-                " alt="">
+                <img src="images/Project Cover8.png" alt="Food">
             </div>
         </div>
     </section>
