--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-            <a class="anchor-button" target="_blank" href="index.html">Order Food</a>
+            <a class="anchor-button" target="_blank" href="https://esratwebhero002.github.io/food-network/index.html">Order Food</a>
         </div>
         <div class="first-half">
             <img src="images/removebg.png" alt="lady eating salads">
@@ -27,7 +27,7 @@
         <div class="first-half">
             <h2>About me</h2>   
             <p>Cooking is something thats makes me happy and i loved cooking for others.I always wanted to be a chef and i really worked hard.It is a very nice profession where you can learn new things daily.When I serve a bowl of a recipe,it contains my love,hard work,and passion for my profession.</p>
-            <a href="index.html" class="anchor-button" target="_blank">Contact me</a>
+            <a href="https://esratwebhero002.github.io/food-network/index.html" class="anchor-button" target="_blank">Contact me</a>
         </div>
     </section>
     <section>
